# textual-cookbook

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  noxfile.py  pyproject.toml  recipe_runner.py  recipe_runner_styles.tcss
.github/workflows/: ci-checks.yml  ci-testing-reports.yml  update-reports.yml
common_bugs/: bug_get_screen.py  bug_query_screens.py
docs/: index.html
docs/reports/: file_index.json  index.html  note.md  nox-report.md  tests-3.10(ver=3.7)-report.html  tests-3.10(ver=3.7)-summary.json  tests-3.10(ver=4.0)-report.html  tests-3.10(ver=4.0)-summary.json  tests-3.10(ver=5.3)-report.html  tests-3.10(ver=5.3)-summary.json  tests-3.9(ver=1.0)-report.html  tests-3.9(ver=2.1)-report.html  tests-3.9(ver=3.0)-report.html  tests-3.9(ver=5.1)-report.html
examples/animation_effects/: animate_multiple.py
examples/architecture_patterns/: config.ini  configparser_usage.py  help_screen.py  logging_html.py
examples/modifying_widgets/: datatable_headersort.py  tabs_unclickable.py
examples/styling_and_colors/: button_focus_highlight.py  button_markup.py  checkbox_style.py  color_basic.py
examples/textual_api_usage/: app_events_order.py  markdownviewer_update.py  reactivity_validation.py  screens_dom.py
examples/tips_and_tricks/: reveal_redacted.py  spinner_widget_loading.py
examples/tricks_tips_and_other/: spinner_widget.py  tooltips_timer.py  truecolor_test.py  widget_loading.py
recipes/animation_effects/: animate_multiple.py  animate_offset.py
recipes/architecture_patterns/: abc_meta.py  app_dict.py  configparser_usage.py  css_basics.py  help_screen.py  logging_html.py
recipes/modifying_widgets/: datatable_expandcol.py  datatable_headersort.py  header_clock.py  listview_tooltips.py  progress_bounce.py  tabs_unclickable.py  textarea_submit.py
recipes/styling_and_colors/: button_focus_highlight.py  button_markup.py  checkbox_style.py  collapsible_style.py  color_basic.py  logging_color.py
recipes/textual_api_usage/: app_events_order.py  click_container.py  click_links.py  markdownviewer_update.py  message_control.py  mouse_capture.py  reactivity_validation.py  screens_dom.py  select_change_options.py  signal_usage.py
recipes/tips_and_tricks/: container_disabled.py  reveal_redacted.py  spinner_widget.py  spinner_widget_loading.py  tooltips_timer.py  transparent_toggle.py  truecolor_test.py  widget_loading.py  worker_async_thread.py
reports/: dark_theme.css  tests-3.9(ver=1.0)-report.html  tests-3.9(ver=2.1)-report.html  tests-3.9(ver=5.1)-report.html
src/textual_cookbook/: cli.py  main.py  styles.tcss
src/textual_cookbook/common_bugs/: bug_query_screens.py  bug_same_widget.py  bug_widget_css.py
src/textual_cookbook/recipes/animation_effects/: animate_multiple.py  animate_offset.py  context_menu.py  reveal_redacted.py  shaking.py  spinner_widget.py  spinner_widget_loading.py
src/textual_cookbook/recipes/architecture_patterns/: abc_meta.py  app_dict.py  configparser_usage.py  css_basics.py  data_containers.py  help_screen.py  logging_html.py  screen_push_wait.py  use_default_screen.py
tests/: test_examples.py  test_recipes.py
(+34 files in other folders)
