[project]
name = "textual-cookbook"
version = "0.1.0"
description = "Textual Cookbook: Recipes for Textual Applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest-html>=4.1.1",
    "textual>=5.1.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-textual-snapshot>=1.1.0",
    "ruff>=0.12.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
