[project]
name = "textual-cookbook"
version = "0.1.0"
description = "Textual Cookbook: Recipes for Textual Applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=5.1.1",
    "textual-pyfiglet>=1.0.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-html>=4.1.1",
    "pytest-textual-snapshot>=1.1.0",
    "ruff>=0.12.7",
    "textual-dev>=1.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 110

[tool.mypy]
pretty = true
# strict = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.basedpyright]
include = ["src"]
typeCheckingMode = "strict"

